--- a/index.html
+++ b/index.html
@@ -198,13 +198,33 @@
             color: #d8e3e7;
         }
 
+        @keyframes navToggle {
+            0% {
+                transform: translateY(0) rotateX(0);
+            }
+
+            50% {
+                transform: translateY(45px) rotateX(90deg);
+            }
+
+            100% {
+                transform: translateY(75px) rotateX(0deg);
+            }
+        }
+
         nav {
             box-shadow: 0px 0px 10px #126e82;
             background: rgb(19, 44, 51);
             background: linear-gradient(360deg, rgba(19, 44, 51, 1) 0%, rgba(18, 110, 130, 1) 50%, rgba(70, 166, 179, 1) 100%);
         }
 
-        footer {}
+        .nav-toggle-off {
+            animation: navToggle 2s ease 1;
+        }
+
+        .nav-toggle-on {
+            animation: navToggle 2s ease reverse 1;
+        }
 
         .nail {
             width: 80px;
@@ -222,14 +242,18 @@
             font-size: 20px;
         }
 
-        .contacts {}
-
         .contacts .contact {
             margin: 0 10px;
             background: white;
             border-radius: 50px;
             padding: 60px;
             display: block;
+            box-shadow: 0px 0px 2.5px #132c33;
+        }
+
+        .contacts .contact:hover {
+            box-shadow: 1px 1px 15px #132c33;
+            transition: box-shadow 0.25s;
         }
 
         .contact a {
@@ -275,6 +299,46 @@
             color: #0077b5;
         }
 
+        #navs {
+            position: relative;
+        }
+
+        #nav-toggle {
+            position: absolute;
+            padding: 12.5px 15px;
+            cursor: pointer;
+            background: rgba(70, 166, 179, 1);
+            border-top-left-radius: 50px;
+            border-top-right-radius: 10px;
+            left: 0px;
+            top: -47px;
+            box-shadow: 2px -3px 5px #126e82;
+        }
+
+        #nav-toggle>.fa-arrow-down {
+            position: relative;
+            top: 0;
+        }
+
+        @keyframes changeTopArrowDown {
+            0% {
+                top: 0;
+            }
+
+            50% {
+                top: 2.5px;
+            }
+
+            100% {
+                top: 0;
+            }
+        }
+
+        #nav-toggle:hover>.fa-arrow-down {
+            position: relative;
+            animation: changeTopArrowDown 0.5s 999999999;
+        }
+
         @media only screen and (max-width: 576px) {
             header {
                 margin-bottom: 0;
@@ -283,12 +347,43 @@
             body {
                 margin-bottom: calc(78px * 2 + 23px);
             }
+
+            @keyframes navToggle {
+                0% {
+                    transform: translateY(0) rotateX(0);
+                }
+
+                50% {
+                    transform: translateY(90px) rotateX(90deg);
+                }
+
+                100% {
+                    transform: translateY(145px) rotateX(0deg);
+                }
+            }
+        }
+
+        @media only screen and (min-width: 576px) and (max-width: 768px) {
+            @keyframes navToggle {
+                0% {
+                    transform: translateY(0) rotateX(0);
+                }
+
+                50% {
+                    transform: translateY(80px) rotateX(90deg);
+                }
+
+                100% {
+                    transform: translateY(12vw) rotateX(0deg);
+                }
+            }
         }
 
         @media only screen and (max-width: 768px) {
             .contacts .contact {
                 width: 250px;
                 height: 250px;
+                padding: 40px;
                 margin: auto;
                 margin-bottom: 50px;
             }
@@ -299,9 +394,23 @@
         }
 
 
-        @media only screen and (max-width: 992px) {
+        @media only screen and (min-width: 768px) and (max-width: 992px) {
             .mt-custom {
                 margin-top: 50px;
+            }
+
+            @keyframes navToggle {
+                0% {
+                    transform: translateY(0) rotateX(0);
+                }
+
+                50% {
+                    transform: translateY(70px) rotateX(90deg);
+                }
+
+                100% {
+                    transform: translateY(95px) rotateX(0deg);
+                }
             }
         }
 
@@ -487,8 +596,11 @@
         </article>
     </main>
 
-    <nav class="container-fluid position-fixed fixed-bottom">
-        <div class="row">
+    <nav class="container-fluid position-fixed fixed-bottom" nav-event="off">
+        <div class="row" id="navs">
+            <div class="blue-bg" id="nav-toggle">
+                <i class="fa fa-arrow-down white-color"></i>
+            </div>
             <a class="nav-child-click py-3 col-4 col-sm-2 col-md-2 col-lg-2 text-center white-color" href="#home">
                 <i class="fa fa-home"></i>
                 <br>
@@ -513,7 +625,7 @@
                 href="#projects-(coming-soon)">
                 <i class="fa fa-folder"></i>
                 <br>
-                Projects (coming soon)
+                Projects <span style="color: red; position: absolute; font-size: 11px; right: 0; left: 0; bottom: 2px;">(coming soon)</span>
             </a>
             <a class=" py-3 col-4 col-sm-2 col-md-2 col-lg-2 text-center white-color"
                 href="https://wa.me/send?text=Hello,&amp;nbsp;I've&amp;nbsp;been&amp;nbsp;seen&amp;nbsp;your&amp;nbsp;portfolio&amp;phone=6285695163031"
@@ -532,6 +644,20 @@
     <script src="./public/js/app.js"></script>
     <script>
         $(document).ready(function () {
+
+            function navigationOnAutoTransform() {
+                const width = $(window).width();
+                if(width >= 992) {
+                    $("nav").css({ transform: "translateY(75px) rotateX(0deg)" });
+                } else if(width >= 768 && width < 992) {
+                    $("nav").css({ transform: "translateY(80px) rotateX(0deg)" });
+                } else if(width >= 576 && width < 768) {
+                    $("nav").css({ transform: "translateY(12vw) rotateX(0deg)" });
+                } else if(width < 576){
+                    $("nav").css({ transform: "translateY(145px) rotateX(0deg)" });
+                }
+            }
+
             $(".auto-height").css('min-height', $(window).height());
             $(".flex-center-vertically").css('min-height', $(window).height() - 300);
             $(".progress-bar").each(function () {
@@ -555,12 +681,50 @@
             $(window).resize(function () {
                 $(".auto-height").css('min-height', $(window).height());
                 $(".flex-center-vertically").css('min-height', $(window).height() - 300);
+                const eventNow = $("nav").attr("nav-event");
+                if(eventNow == "on") {
+                    navigationOnAutoTransform();
+                }
             });
 
             var d = new Date();
             $("#since").html("2017 - " + d.getFullYear());
             $("#copyright").html(d.getFullYear() == '2021' ? '2021' : '2021 - ' + d.getFullYear());
             $("#age").html(d.getFullYear() - 1997);
+
+            $("#nav-toggle").click(function () {
+                const eventNow = $("nav").attr("nav-event");
+                var rotationChange = 0;
+
+                switch(eventNow) {
+                    case "off":
+                        $("nav").removeClass("nav-toggle-on");
+                        setTimeout(function() {
+                            $("nav").addClass("nav-toggle-off");
+                            $("nav").attr("nav-event", "on");
+                            navigationOnAutoTransform();
+                        }, 100);
+                        rotationChange = -180;
+                        break;
+                    case "on":
+                        $("nav").removeClass("nav-toggle-off");
+                        setTimeout(function() {
+                            $("nav").addClass("nav-toggle-on");
+                            $("nav").attr("nav-event", "off");
+                            $("nav").css({ transform: "translateY(0) rotateX(0deg)" });
+                        }, 100);
+                        rotationChange = 0;
+                        break;
+                }
+                
+                $("#nav-toggle > .fa-arrow-down").animate({ rotation: rotationChange }, {
+                    duration: 500,
+                    easing: 'linear',
+                    step: function () {
+                        $("#nav-toggle > .fa-arrow-down").css({ transform: 'rotate(' + this.rotation + 'deg)' });
+                    }
+                });
+            });
         });
     </script>
 </body>
