--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
             overflow-x: hidden;
         }
 
-        body {
-            margin-bottom: 78px;
+        footer {
+            padding: 3rem;
+            padding-bottom: calc(3rem + 78px);
         }
 
         @keyframes fotoAnimasi {
@@ -344,8 +345,8 @@
                 margin-bottom: 0;
             }
 
-            body {
-                margin-bottom: calc(78px * 2 + 23px);
+            footer {
+                padding-bottom: calc(3rem + 78px * 2 + 23px);
             }
 
             @keyframes navToggle {
@@ -637,7 +638,7 @@
         </div>
     </nav>
 
-    <footer class="text-center mt-5 black-bg white-color p-5">
+    <footer class="text-center mt-5 black-bg white-color">
         Copyright &copy; <span id="copyright"></span> Kevin Nicholas, BSc.
     </footer>
 
