--- a/index.html
+++ b/index.html
@@ -441,11 +441,11 @@
     <main>
         <article class="container">
             <div class="auto-height row">
-                <div class="col-lg-6 col-md-6">
+                <div class="col-lg-4 col-md-6 p-lg-1">
                     <img class="foto_wisuda" src="./public/storage/my_foto_wisuda.png" alt="ME">
                     <img class="nail" src="./public/storage/pushpin-147918_640.png" alt="NAIL">
                 </div>
-                <section class="mt-5 col-lg-6 col-md-6 text-right">
+                <section class="mt-5 col-lg-8 col-md-6 text-right">
                     <h3 class="mb-5">
                         Programmer <span id="since"></span>
                     </h3>
@@ -462,7 +462,7 @@
                 </section>
             </div>
             <div class="auto-height pt-4 row" id="about-me">
-                <section class="col-lg-6 col-md-6">
+                <section class="col-lg-8 col-md-6">
                     <h1>About me</h1>
                     <hr />
                     <p>
@@ -505,7 +505,7 @@
                         as IT Manager.
                     </p>
                 </section>
-                <div class="col-lg-6 col-md-6 d-none d-sm-none d-md-block">
+                <div class="col-lg-4 p-lg-1 col-md-6 d-none d-sm-none d-md-block">
                     <img class="foto_ijazah" src="./public/storage/IMG_8965.JPG" alt="foto ijazah" />
                     <img class="nail-2" src="./public/storage/pushpin-147918_640.png" alt="NAIL">
                 </div>
